syntax = "proto3";

option csharp_namespace = "BantuinNexus_gRPC";

import "google/protobuf/timestamp.proto";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (stream HelloReply);
  rpc SayHelloUnary (HelloRequest) returns (HelloReply);
  rpc SayHelloAgain (stream HelloRequest) returns (Tes);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message Tes{
	repeated HelloReply reply = 1;
}
